2006-09-04  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/driver.c: Silence compiler warning and removed
	limitation in the DriverThread/SpoolerThread during queueing read sockets, if
	one failed to queue it will not skip queuing other read sock but will try
	to submit all

2006-08-31  Stephen Deasey  <sd@groks.org>

	* NEWS: Update with some of the latest changes. Added a new
	section highlighting config changes.

	* nsd/nsd.h:
	* nsd/info.c:
	* nsd/init.c:
	* nsd/mimetypes.c:
	* nsd/nsconf.c:
	* tests/ns_info.test:
	* tests/ns_mime.test: Merge in the mime-types from contrib. Add
	new command ns_info mimetypes which returns the list of file
	extension to mime-type mappings at runtime.

	* nsd/tclresp.c: Don't update the interp result directly as under
	some circumstances it can be a shared object.

2006-08-26  Vlad Seryakov  <seryakov@users.sf.net>

	* tcl/http.tcl: Fixed http proxy bug, added simple ip access restrictions

2006-08-21  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsd/return.c: Use our own defined macros HTTP11_HDR_TE
	and HTTP11_HDR_TE_ENCODED insead of plain strings.

2006-08-14  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* include/ns.h: Added definitions for poll() emulation
	under Windows, as we do not include poll.h there.
	Also, defined ETIMEDOUT so we get the compilation done.
	The defined value for ETIMEDOUT has no other meaning
	then to be accepted by eventual strerror() so we had
	to "invent" something appropriate. Unfortunately the
	build-in set of errno values in Windows does not seem
	to have any "near" candidate to the Unix pendant so 
	we just defined it to one (1). This way it will at least
	work, albeit not have too much sense in error messages.

2006-08-13  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* tests/ns_proxy.test: Test for [ns_proxy handles ?pool?]
	* nsproxy/nsproxylib.c: Fixed PushProxy() to honour 
	proxies without associated slave to be set for expiration.
