@@ -38,7 +38,7 @@
 
 proc nstest_http {args} {
     ns_parseargs {
-        {-encoding "utf-8"} -setheaders -getheaders {-getbody 0} {-http 1.0} --
+        {-encoding "utf-8"} -setheaders -getheaders {-chunked 1} {-getbody 0} {-http 1.0} --
         method {url ""} {body ""}
     } $args
 
@@ -217,12 +217,40 @@ proc nstest_http {args} {
             lappend response [ns_set iget $hdrs $h]
         }
     }
-
+    if {$chunked == 1 && [ns_set iget $hdrs Transfer-Encoding] != "chunked"} {
+        set chunked 0
+    }
     catch {close $rfd}
     catch {close $wfd}
     catch {ns_set free $hdrs}
 
     if {[string is true $getbody] && $body ne {}} {
+        
+        #
+        # Try to parse chunked encoding and concatenate all
+        # chunks into one body
+        #
+
+        if { $chunked == 1 } {
+          set text ""
+          set offset 0
+          while {1} {
+              # Parse size header
+              set end [string first "\n" $body $offset]
+              if {$end == -1} {
+                  break
+              }
+              set size [scan [string range $body $offset $end] %x]
+              if {$size == 0} {
+                  break
+              }
+              set offset [incr end]
+              # Read data
+              append text [string range $body $offset [expr $offset+$size-1]]
+              incr offset [incr size]
+          }
+          set body $text
+        }
         lappend response $body
     }
 
